# nemotron-asr-streaming-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: install_nemo_source.py  stream_wav.py
src/nemotron_asr_service/: __init__.py  __main__.py  app.py  audio.py  backend.py  config.py  protocol.py  service.py  vad.py
tests/: test_protocol_service.py
