[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nemotron-asr-streaming-api"
version = "0.1.0"
description = "OpenAI-Realtime-like WebSocket wrapper for NVIDIA Nemotron 3.5 ASR streaming via NeMo."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "numpy>=1.26",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27",
    "pytest>=8.0",
]
client = [
    "websockets>=13.0",
]
vad = [
    "silero-vad>=5.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
